# OffGridRentalManager

./: .gitignore  .replit  README.md  __init__.py  app.py  main.py  models.py  pyproject.toml  replit.nix  routes.py  service-worker.js
app/: __init__.py  models.py  routes.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js  charts.js  offline.js
instance/: offgrid.db
static/: index.html  service-worker.js
static/css/: styles.css
static/js/: app.js  charts.js
templates/: index.html
